first commit for newsletter. completed till tutorial 4

--- a/homepage/templates/homepage/base.html
+++ b/homepage/templates/homepage/base.html
@@ -105,9 +105,10 @@
                             <div class="d-inline-flex p-2 bd-highlight align-items-center bg-danger">
                                 <div class="row">
                                     {% for categorylist in category %}
-                                    <div class="col2">
-                                        <a href="#">{{ categorylist.get_name_display }}</a>
-                                    </div>{% endfor %}
+                                        <div class="col2">
+                                            <a href="#">{{ categorylist.get_name_display }}</a>
+                                        </div
+                                    >{% endfor %}
                                 </div>
                             </div>
                         </div>
