--- a/newsletters/templates/newsletters/subscribe.html
+++ b/newsletters/templates/newsletters/subscribe.html
@@ -1,5 +1,5 @@
 {% extends 'homepage/base.html' %}
-
+{% load crispy_forms_tags %}
 {% block content %}
 <div class= "container">
     <div class= "row">
@@ -7,7 +7,7 @@
             <h6 class="text-center">Sign Up BuyandBye's Newsletter </h6>
             <form method="POST">{% csrf_token %}
                 <div class = "input-group">
-                    {{ form }}
+                    {{ form|crispy }}
                     <span class ="input-group-btn">
                         <button class = "btn btn-default" type="submit">Subscribe</button>
                     </span>
