--- a/newsletters/templates/newsletters/subscribe.html
+++ b/newsletters/templates/newsletters/subscribe.html
@@ -5,6 +5,13 @@
     <div class= "row">
         <div class="col-lg-6 col-lg-offset-3">
             <h6 class="text-center">Sign Up BuyandBye's Newsletter </h6>
+            {% if messages %}
+                {% for message in messages %}
+                    <div {% if message.tags %} class="{{ message.tags }}" {% endif %} role="alert">
+                            {{ message }}
+                    </div>      
+                {% endfor %}
+            {% else %} 
             <form method="POST">{% csrf_token %}
                 <div class = "input-group">
                     {{ form|crispy }}
@@ -13,6 +20,7 @@
                     </span>
                 </div>    
             </form>
+            {% endif %}
         </div>
     </div>
 </div>
