--- a/newsletters/templates/newsletters/sign_up.html
+++ b/newsletters/templates/newsletters/sign_up.html
@@ -1,4 +1,4 @@
-{% extends 'homepage/base.html' %}
+ {% extends 'base.html' %}
 
 {% block content %}
 <div class= "container">
@@ -15,4 +15,4 @@
         </div>
     </div>
 </div>
-{% endblock content %} 
+{% endblock content %}
